--- a/TCC/templates/TCC/FORN/index.html
+++ b/TCC/templates/TCC/FORN/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'TCC/FORN/index.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TOCK.STORE</title>
+    <title>STOCK.STORE</title>
         <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
